# filemungus

./: .gitignore  CMakeLists.txt  build.sh  resources.xrc  run.sh  updateRes.sh
.cache/clangd/index/: BottomPanel.cpp.DC06730D4CE95D9D.idx  BottomPanel.h.46FD4BE139EC1874.idx  FileMungusApp.cpp.94BB4656E515FAF5.idx  FileMungusApp.h.3BCF0F841C126EA9.idx  FileMungusLogic.h.0473A45F78AC4574.idx  FileMungusMainWindow.cpp.285D54C31469B751.idx  FileMungusMainWindow.h.984B760D8F7C16A7.idx  FileMungusPathLogic.cpp.443B9877197445FD.idx  FileMungusPathLogic.h.0A78E6A5D0E55B73.idx  FileView.cpp.166BCB25DCCC4FEA.idx  FileView.h.3840D6FDBC2F102E.idx  ObservableStack.h.EC475E53AD30442A.idx  SidePanel.cpp.1462E50CE144763A.idx  SidePanel.h.71AF97C7E2925D23.idx  TopPanel.cpp.F1C0E3561B340311.idx  TopPanel.h.0226A5DEDFA64BEE.idx  main.cpp.23999AFF6A010493.idx
.github/workflows/: cmake-multi-platform.yml
cmake/: FetchCPM.cmake  ProjectLibs.cmake
include/: CreateDialog.h  CustomDialog.h  FileMenu.h  FileMungusApp.h  FileMungusMainWindow.h  FileMungusPathLogic.h  FileView.h  ObservableStack.h  RemoveDialog.h  RenameDialog.h  SidePanel.h  TopPanel.h
src/: CreateDialog.cpp  CustomDialog.cpp  FileMenu.cpp  FileMungusApp.cpp  FileMungusMainWindow.cpp  FileMungusPathLogic.cpp  FileView.cpp  RemoveDialog.cpp  RenameDialog.cpp  SidePanel.cpp  TopPanel.cpp  main.cpp  resource.cpp
